courses/430_programming-languages/assignment-6/tests/error/hw4_eval19.correct
assignment requires matching types, found 'int' and 'none'
